Added different types of form fields to index.html
Not sure whether to use them inside modal yet
Getting an error on signout, but the functionality of
sign-up, sign-in, change-password seem to be working great.

4/11 4:53pm

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                 <input type="submit" name="submit" value="Sign Out">
               </fieldset>
             </form>
+            <!-- possibly add "get player stats" to this area -->
             <br>
 
+
+<!-- Game Board -->
 
 
 
@@ -112,7 +115,7 @@
           <!-- Modal Header -->
           <!-- <div class="modal-header">
             <h1>Sign in if you have an account! Sign up if you don't!<h1>
-              <button type="button" class="close" --> -->
+              <button type="button" class="close" -->
 
 
 
