--- a/index.html
+++ b/index.html
@@ -60,27 +60,27 @@
         <div class="container">
           <div class= "game-board" id=game-board>
             <div class="row-1" id="row-1">
-              <div data-id="0" id="cell-0">
+              <div data-id="0" class= "game-cell" id="cell-0">
               </div>
-              <div data-id="1" id="cell-1">
+              <div data-id="1" class= "game-cell" id="cell-1">
               </div>
-              <div data-id="2" id="cell-2">
+              <div data-id="2" class= "game-cell" id="cell-2">
               </div>
             </div>
             <div class="row-2" id="row-2">
-              <div data-id="3" id="cell-3">
+              <div data-id="3" class= "game-cell" id="cell-3">
               </div>
-              <div data-id="4" id="cell-4">
+              <div data-id="4" class= "game-cell" id="cell-4">
               </div>
-              <div data-id="5" id="cell-5">
+              <div data-id="5" class= "game-cell" id="cell-5">
               </div>
             </div>
             <div class="row-3" id="row-3">
-              <div data-id="6" id="cell-6">
+              <div data-id="6" class= "game-cell" id="cell-6">
               </div>
-              <div data-id="7" id="cell-7">
+              <div data-id="7" class= "game-cell" id="cell-7">
               </div>
-              <div data-id="8" id="cell-8">
+              <div data-id="8" class= "game-cell" id="cell-8">
               </div>
             </div>
           </div>
