Added more event handlers and a tmp file to mess around in
Wanted to commit before going to lunch

4/12 1:08pm

--- a/index.html
+++ b/index.html
@@ -60,28 +60,21 @@
         <div class="container">
           <div class= "game-board" id=game-board>
             <div class="row-1" id="row-1">
-              <div data-id="0" class= "game-cell" id="cell-0">
-              </div>
-              <div data-id="1" class= "game-cell" id="cell-1">
-              </div>
-              <div data-id="2" class= "game-cell" id="cell-2">
-              </div>
+              <div data-id="0" class= "game-cell" id="cell-0"></div>
+              <div data-id="1" class= "game-cell" id="cell-1"></div>
+              <div data-id="2" class= "game-cell" id="cell-2"></div>
             </div>
+
             <div class="row-2" id="row-2">
-              <div data-id="3" class= "game-cell" id="cell-3">
-              </div>
-              <div data-id="4" class= "game-cell" id="cell-4">
-              </div>
-              <div data-id="5" class= "game-cell" id="cell-5">
-              </div>
+              <div data-id="3" class= "game-cell" id="cell-3"></div>
+              <div data-id="4" class= "game-cell" id="cell-4"></div>
+              <div data-id="5" class= "game-cell" id="cell-5"></div>
             </div>
+
             <div class="row-3" id="row-3">
-              <div data-id="6" class= "game-cell" id="cell-6">
-              </div>
-              <div data-id="7" class= "game-cell" id="cell-7">
-              </div>
-              <div data-id="8" class= "game-cell" id="cell-8">
-              </div>
+              <div data-id="6" class= "game-cell" id="cell-6"></div>
+              <div data-id="7" class= "game-cell" id="cell-7"></div>
+              <div data-id="8" class= "game-cell" id="cell-8"></div>
             </div>
           </div>
         </div>
