Some minor changes that I went over with Misha
Plans to nest all the game js files in a folder

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <!-- Game Board -->
-        <div id="new-game-button">New Game</div>
+        <button type="button" class="btn btn-primary">Start New Game</button>
 
         <div class="container">
           <div class= "game-board" id=game-board>
@@ -78,6 +78,11 @@
           </div>
         </div>
 
+        <div class="btn-group">
+          <button type="button" class="btn btn-primary">Get Stats</button>
+          <button type="button" class="btn btn-primary">Get Games</button>
+          <button type="button" class="btn btn-primary">Get Game</button>
+        </div>
 
 <!-- Possible Modal Form for Signin Including the Forms -->
       <!-- Button trigger modal -->
