--- a/index.html
+++ b/index.html
@@ -57,24 +57,20 @@
         <button type="button" class="btn btn-primary">Start New Game</button>
 
         <div class="container">
-          <div class= "game-board" id=game-board>
-            <div class="row-1" id="row-1">
-              <div data-id="0" class= "game-cell" id="cell-0"></div>
-              <div data-id="1" class= "game-cell" id="cell-1"></div>
-              <div data-id="2" class= "game-cell" id="cell-2"></div>
-            </div>
+          <div class= "table gameboard-table" id=game-board>
 
-            <div class="row-2" id="row-2">
-              <div data-id="3" class= "game-cell" id="cell-3"></div>
-              <div data-id="4" class= "game-cell" id="cell-4"></div>
-              <div data-id="5" class= "game-cell" id="cell-5"></div>
-            </div>
+              <div data-id="0" class= "game-cell col-xs-4" id="cell-1"></div>
+              <div data-id="1" class= "game-cell col-xs-4" id="cell-1"></div>
+              <div data-id="2" class= "game-cell col-xs-4" id="cell-2"></div>
 
-            <div class="row-3" id="row-3">
-              <div data-id="6" class= "game-cell" id="cell-6"></div>
-              <div data-id="7" class= "game-cell" id="cell-7"></div>
-              <div data-id="8" class= "game-cell" id="cell-8"></div>
-            </div>
+              <div data-id="3" class= "game-cell col-xs-4" id="cell-3"></div>
+              <div data-id="4" class= "game-cell col-xs-4" id="cell-4"></div>
+              <div data-id="5" class= "game-cell col-xs-4" id="cell-5"></div>
+
+              <div data-id="6" class= "game-cell col-xs-4" id="cell-6"></div>
+              <div data-id="7" class= "game-cell col-xs-4" id="cell-7"></div>
+              <div data-id="8" class= "game-cell col-xs-4" id="cell-8"></div>
+
           </div>
         </div>
 
@@ -83,6 +79,9 @@
           <button type="button" class="btn btn-primary">Get Games</button>
           <button type="button" class="btn btn-primary">Get Game</button>
         </div>
+
+
+
 
 <!-- Possible Modal Form for Signin Including the Forms -->
       <!-- Button trigger modal -->
