Created folder to house gameApi actions and userApi actions
Created and nested new files int the scripts/game folder
Created gameTemplate, gameChecks, gameMoves
Put some starter code into the gameApi/game-ui file

4/13 11:33am

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 
 
 
+        <!-- MODAL SECTION -->
+        <!-- MODAL SECTION -->
+
 
 <!-- Possible Modal Form for Signin Including the Forms -->
       <!-- Button trigger modal -->
