Changed file names in gameApi to be more semantically consistent
added a few lines of code to onNewGame function

4/13 3:52pm

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 <!-- Game Board -->
-        <button type="button" class="btn btn-primary">Start New Game</button>
+        <button type="button" class="btn btn-primary" id="start-new-game-button">Start New Game</button>
 
         <div class="container">
           <div class= "table gameboard-table" id="game-board">
