--- a/index.html
+++ b/index.html
@@ -14,6 +14,79 @@
     <body class="container-fluid">
       <h1>Tic Tac Toe</h1>
 
+      <body class="container-fluid">
+
+            <nav class="navbar navbar-fixed-top navbar-transparent navbar-right" id="top-nav-bar">
+
+              <span class="navbar-brand">
+                <a href=".">Tic Tac Toe</a>
+              </span>
+
+              <span class="modal-button-container not-signed-in">
+                <input type="submit" class="modal-button btn btn-default" data-toggle="modal" data-target="#signUpModal" value="Sign Up!">
+              </span>
+
+              <span class="modal-button-container not-signed-in">
+                <input type="submit" class="modal-button btn btn-default" data-toggle="modal" data-target="#signInModal" value="Sign In!">
+              </span>
+
+              <span>
+                <input id="new-game" class="btn btn-default signed-in-view" type="submit" name="submit" value="Start New Game!">
+              </span>
+
+              <span>
+                <input id="join-game-modal" class="btn btn-default signed-in-view" type="submit" name="submit" value="Join Game!">
+              </span>
+
+              <span>
+                <input id="show-this-game-info" class="btn btn-default signed-in-view" type="submit" name="submit" value="Refresh Game Info">
+              </span>
+
+              <span>
+                <input id="exit-game" class="btn btn-default signed-in-view" type="submit" name="submit" value="Leave Game">
+              </span>
+
+              <span>
+                <input id="show-any-game-info-modal" class="btn btn-default signed-in-view" type="submit" name="submit" value="View Any Game">
+              </span>
+
+              <span>
+                <input id="play-this-game-modal" class="btn btn-default signed-in-view" type="submit" name="submit" value="Play Any Game">
+              </span>
+
+              <span>
+                <input id="show-player-stats-modal" class="modal-button btn btn-default signed-in-view" type="submit" name="submit" value="Stats">
+              </span>
+
+              <span>
+                <input id="show-token-modal" class="modal-button btn btn-default signed-in-view" type="submit" name="submit" value="Auth Token">
+              </span>
+
+              <span class="modal-button-container signed-in-view">
+                <input type="submit" class="modal-button btn btn-default" data-toggle="modal" data-target="#changePWModal" value="Change Password">
+              </span>
+
+              <span>
+                <input id="sign-out" class="modal-button btn btn-default signed-in-view" type="submit" name="submit" value="Sign out!">
+              </span>
+
+            </nav>
+
+            <br><br><br><br>
+
+            <div>
+              <h1 id="page-title" class="not-signed-in">Tic Tac Toe</h1>
+            </div>
+
+            <div class="container">
+              <div id="session-stats" class="signed-in-view col-xs-4">
+                <span id="session-x-wins"></span><br>
+                <span id="session-o-wins"></span><br>
+                <span id="session-ties"></span>
+              </div>
+            </div>
+
+
       <!-- Sign In Forms! -->
         <div class="auth-section-forms">
             <form id="sign-up">
